--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,19 @@
 
 body {
   margin: 0;
-  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;*/
-  font-family: 'Open Sans',sans-serif;
-  /*font-family: 'M PLUS 1p', sans-serif;*/
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./bg.png');
-  background-size: 100%;
+
+  /* Combine the background image with a gradient */
+  background-image: 
+    url('./bg.png'),
+    linear-gradient(to bottom, rgba(28, 28, 50, 1), rgba(17, 17, 40, 1));
+  background-size: cover; /* Ensures the image covers the viewport */
+  background-repeat: no-repeat;
+  background-position: top; /* Start the image at the top */
+  background-attachment: fixed; /* Keeps the background fixed during scroll */
+
   animation-duration: 3s;
   animation-timing-function: linear;
   animation-delay: 0s;
@@ -21,10 +25,8 @@ body {
   animation-fill-mode: none;
   animation-play-state: running;
   animation-name: gradientTransform;
-  background-repeat: no-repeat;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
